--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
 body {
     width: 100%;
     max-width: 600px;
-    background: red;
+    background: var(--white-color);
     overflow: hidden;
     padding-bottom: calc(110px + env(safe-area-inset-bottom, 12px));
     margin: 0 auto;
@@ -64,6 +64,6 @@ body {
 * Splash Screen Image Styles
 */
 .splash-main-image img {
-    height: 505px;
+    height: 305px;
     display: block;
 }
